--- a/LAB_session/Gmail_Account_form.html
+++ b/LAB_session/Gmail_Account_form.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF=8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gmail Account Form</title>
     <link rel="stylesheet" href="Gmail_Account_Form.css">
 </head>
